--- a/src/public/index.html
+++ b/src/public/index.html
@@ -35,11 +35,26 @@
     </form>
     <ol class="searchlist"></ol>
     <hr>
+    <h2>Search using payload</h2>
     <form method="post" class="postdata">
         <label class="form-label">Search: <input type="search" required class="form-control" name="query"></label>
         <button class="btn btn-primary">Login</button>
         <output></output>
     </form> 
+    <h2>Upload</h2>
+
+     <form action="/uploads" method="post" class="uploaddata row align-items-center" enctype="multipart/form-data">
+        <div class="col-auto">
+            <label class="form-label" for="resume">Upload</label>
+        </div>
+        <div class="col-auto">
+          <input class="form-control" multiple type="file" name="resume" id="resume" required accept=".pdf">
+        </div>
+        <div class="col-auto">
+          <button class="btn btn-primary">Upload</button>
+        </div>
+     </form>
+
     
   </div>
 <script src="js/bootstrap.bundle.min.js"></script>
